--- a/index.html
+++ b/index.html
@@ -13,38 +13,38 @@
             <div class ="output"></div>
             
             <div class="calc-btn-row">
-                <button class="allclear">AC</button>
-                <button class="operator">+/-</button>
-                <button class="operator">%</button>
-                <button class="operator">/</button>
+                <button class="allclear circle">AC</button>
+                <button class="operator circle">+/-</button>
+                <button class="operator circle">%</button>
+                <button class="operator circle">/</button>
             </div>
 
             <div class="calc-btn-row">
-                <button class="number">7</button>
-                <button class="number">8</button>
-                <button class="number">9</button>
-                <button class="operator">*</button>
+                <button class="number circle">7</button>
+                <button class="number circle">8</button>
+                <button class="number circle">9</button>
+                <button class="operator circle">*</button>
             </div>
 
             <div class="calc-btn-row">
-                <button class="number">4</button>
-                <button class="number">5</button>
-                <button class="number">6</button>
-                <button class="operator">-</button>
+                <button class="number circle">4</button>
+                <button class="number circle">5</button>
+                <button class="number circle">6</button>
+                <button class="operator circle">-</button>
             </div>
 
             <div class="calc-btn-row">
-                <button class="number">1</button>
-                <button class="number">2</button>
-                <button class="number">3</button>
-                <button class="operator">+</button>
+                <button class="number circle">1</button>
+                <button class="number circle">2</button>
+                <button class="number circle">3</button>
+                <button class="operator circle">+</button>
             </div>
 
             
             <div class="calc-btn-row">
-                <button class="number zero">0</button>
-                <button class="operator">.</button>
-                <button class="result">=</button>
+                <button class="number zero circle">0</button>
+                <button class="operator circle">.</button>
+                <button class="result circle">=</button>
             </div>
         </div> 
 
